# zxing-ros

./: README
zxing_cv/: CMakeLists.txt  package.xml
zxing_cv/src/: qr_detector.cpp  qr_detector.h  qr_detector_nodelet.cpp
zxing_msgs/: CMakeLists.txt  package.xml
zxing_msgs/msg/: QRCodeArray.msg  StampedQRCode.msg
